# maka

./: .gitignore  BACKEND_TESTING.md  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
doc/: API.md  ARCHITECTURE.md  BACKEND_TESTING.md  COMPONENTS.md  DEVELOPMENT.md  INDEX.md  PROJECT_STATUS.md  README.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: disk_ops.rs  disk_scanner.rs  disk_scanner_tests.rs  main.rs  permissions.rs
src/components/: SunburstChart.tsx  TreemapChart.tsx
