[package]
name = "maka"
version = "0.1.0"
description = "A disk usage visualization tool inspired by DaisyDisk"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "dialog-open", "shell-open", "path-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
dashmap = "5.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
