[package]
name = "maka"
version = "0.2.1"
description = "A disk usage visualization tool"
authors = ["mu001999"]
license = "MIT"
repository = "https://github.com/mu001999/maka"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-macos-permissions = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
dashmap = "5.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
